--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-alert-notification": "^0.3.4",
     "react-native-animatable": "^1.3.3",
     "react-native-feather": "^1.1.2",
     "react-native-heroicons": "^3.2.0",
@@ -29,7 +30,9 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "13.4.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "expo-barcode-scanner": "~12.3.2",
+    "@react-native-community/datetimepicker": "6.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
